# Plant-Disease-Classification

./: .gitignore  README.md  README_CNN_Klasifikator.md  README_Conditional_GAN.md  cnn.pth  cnn.py  cnn_binary.py  cnn_classifier.py  conditional_gan.py  dc_discriminator.pth  download_dataset.py  gan.py  imageutils.py  main.py  plant_classifier_cnn.py  pyproject.toml  semisupervised_plant_classification.py  sgan_demo.py  sgan_plant_disease.py  test_conditional_gan.py
