[project]
name = "plant-disease-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchmetrics==1.4.0",
    "torchvision>=0.23.0",
]
